syntax = "proto3";

package auth;

option go_package = "/internal/auth";

message User {
  string username = 1;
  string email = 2;
  string password = 3;
}

message UserRequest {
  User userEntry = 1;
}

message ResponseData {
  uint64 ID = 1;
  string token = 2;
}

message UserResponse {
  string message = 1;
  ResponseData data = 2;
}
//    protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative auth.proto
service AuthService {
  rpc RegisterUser(UserRequest) returns (UserResponse);
  rpc AuthUser(UserRequest) returns (UserResponse);
}
